--- a/src/jobs/8.md
+++ b/src/jobs/8.md
@@ -1,7 +1,7 @@
 ---
 id: 8
 publishData: Feb 11th, 2020
-title: React Developer
+title: React Developers
 team: CGI LL
 price: $2,000 - $15,000
 salaryClass: Monthly Salary
